force-app/main/default/objects/vlocity_cmt__PremisesPartyRelationship__c/vlocity_cmt__PremisesPartyRelationship__c.object-meta.xml
<CustomObject>
    <description>Represents relationships between a premises and the organizations, people, households or other parties that have a relationship to the premises. For example, an owner relationship, facility manager relationship, tenant relationship, or legal representative relationship.</description>
    <label>PremisesPartyRelationship</label>
    <nameField>
        <label>PremisesPartyRelationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PremisesPartyRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>