force-app/main/default/objects/vlocity_cmt__PremisesPartyRelationship__c/fields/vlocity_cmt__PremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PremisesId__c</fullName>
    <description>Premises Id</description>
    <label>Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>PremisesPartyRelationships</relationshipLabel>
    <relationshipName>PremisesPartyRelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>